--- a/greeting/package.json
+++ b/greeting/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "greeting",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "alexa-sdk": "^1.0.25"
-  }
+	"name": "flash_cards",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"alexa-sdk": "^1.0.25"
+	}
 }
